[package]
name = "polaris_shell"
version = "0.0.1"
description = "Shell command execution for Polaris agents"
edition = "2024"
keywords = ["polaris-ai", "shell", "execution", "agents"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"

[lints]
workspace = true

[dependencies]
dirs = "6.0"
polaris_system = { path = "../polaris_system", version = "0.0.2" }
polaris_tools = { path = "../polaris_tools", version = "0.0.1" }
polaris_models = { path = "../polaris_models", version = "0.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["process", "time", "io-util"] }
tracing = "0.1"
names = { version = "0.14.0", default-features = false }

[dev-dependencies]
tempfile = "3.15"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
