[package]
name = "polaris_shell"
version.workspace = true
description = "Shell command execution for Polaris agents"
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "shell", "execution", "agents"]
categories = ["os", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dirs = "6.0"
polaris_system = { path = "../polaris_system", version = "0.2.2" }
polaris_tools = { path = "../polaris_tools", version = "0.2.2" }
polaris_models = { path = "../polaris_models", version = "0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["process", "time", "io-util"] }
tracing = "0.1"
names = { version = "0.14.0", default-features = false }

[dev-dependencies]
tempfile = "3.15"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
