[package]
name = "polaris_system"
version = "0.0.2"
description = "A lightweight ECS-inspired system framework for Polaris."
edition = "2024"
keywords = []
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"

[lints]
workspace = true

[dependencies]
polaris_system_macros = { path = "system_macros", version = "0.0.2" }
downcast-rs = "2.0.2"
parking_lot = { version = "0.12.5", features = ["send_guard"] }
thiserror = "2.0.17"
hashbrown = "0.16.1"
variadics_please = "1.1"

# Async runtime
[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "sync", "macros"] }
tokio-test = "0.4"
serde_json = "1.0"
trybuild = "1.0"
