[package]
name = "polaris_system"
version.workspace = true
description = "A lightweight ECS-inspired system framework for Polaris."
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "ecs", "systems", "async", "framework"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
polaris_system_macros = { path = "system_macros", version = "0.3.0" }
downcast-rs = "2.0.2"
parking_lot = { version = "0.12.5", features = ["send_guard"] }
thiserror = "2.0.17"
hashbrown = "0.16.1"
variadics_please = "1.1"

# Async runtime
[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "sync", "macros"] }
tokio-test = "0.4"
serde_json = "1.0"
trybuild = "1.0"
