[package]
name = "polaris_tools"
version = "0.0.1"
description = "Tool framework for Polaris agents"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.0.3" }
polaris_models = { path = "../polaris_models", version = "0.0.1" }
tool_macros = { path = "tool_macros", version = "0.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = "1.2.0"
thiserror = "2.0"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0"
