[package]
name = "polaris_tools"
version.workspace = true
description = "Tool framework for Polaris agents"
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "tools", "agents", "ai", "llm"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.2.2" }
polaris_models = { path = "../polaris_models", version = "0.2.2" }
tool_macros = { path = "tool_macros", version = "0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = "1.2.0"
thiserror = "2.0"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0"
