[package]
name = "polaris_tools"
version.workspace = true
description = "Tool framework for Polaris agents"
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "tools", "agents", "ai", "llm"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
dashboard = ["dep:axum", "dep:bytes", "dep:polaris_app"]

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.5" }
polaris_models = { path = "../polaris_models", version = "0.5" }
tool_macros = { path = "tool_macros", version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = "1.2.0"
thiserror = "2.0"
indexmap = { version = "2.13.0", features = ["serde"] }
axum = { version = "0.8", features = ["tokio"], optional = true }
bytes = { version = "1", optional = true }
polaris_app = { path = "../polaris_app", version = "0.5", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0"
# Used by the integration tests under `--all-features` because
# `ToolsPlugin` then requires `AppPlugin`.
polaris_app = { path = "../polaris_app", default-features = false }
