[package]
name = "polaris_system_macros"
version.workspace = true
description = "Macros for polaris_system crate."
edition.workspace = true
keywords = []
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
polaris_macro_utils = { path = "../../polaris_macro_utils", version = "0.2.2" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
polaris_system = { path = ".." }
