[package]
name = "tool_macros"
version.workspace = true
description = "Procedural macros for Polaris tool framework"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
polaris_macro_utils = { path = "../../polaris_macro_utils", version = "0.2.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
polaris_tools = { path = ".." }
polaris_models = { path = "../../polaris_models" }
serde_json = "1.0"
